# ihautoclicker

./: .gitignore  README.md  build.bat  build.sh
app/: build.gradle
app/src/main/java/: module-info.java
app/src/main/java/com/github/imhammer/ihautoclicker/: App.java
app/src/main/java/com/github/imhammer/ihautoclicker/controller/: ProfileItemControl.java
app/src/main/java/com/github/imhammer/ihautoclicker/controller/fx/: FXAppController.java  FXProfileController.java
app/src/main/java/com/github/imhammer/ihautoclicker/profile/: Profile.java
app/src/main/resources/css/: checkbox.css  radiobutton.css
autoclicker/: build.bat  build.sh  settings.gradle
autoclicker/app/src/main/java/com/github/imhammer/ihautoclicker/: Launch.java
autoclicker/app/src/main/java/com/github/imhammer/ihautoclicker/controller/: MainController.java  ProfileController.java
autoclicker/app/src/main/java/com/github/imhammer/ihautoclicker/controller/fx/: FXProfileItemController.java
autoclicker/app/src/main/java/com/github/imhammer/ihautoclicker/manager/: FXPaneManager.java  KeysManager.java
autoclicker/app/src/main/java/com/github/imhammer/ihautoclicker/profile/: ProfilesManager.java
autoclicker/app/src/main/java/com/github/imhammer/ihautoclicker/run/: ProfileRunnable.java
autoclicker/app/src/main/java/com/github/imhammer/ihautoclicker/utils/: AppUtils.java  TextFieldObservable.java
autoclicker/app/src/main/resources/windows/: profile.fxml
autoclicker/linux_appimage/IHAutoClicker_v1.0.0.AppDir/: AppRun
autoclicker/linux_appimage/IHAutoClicker_v1.0.0.AppDir/usr/share/applications/: ihautoclicker.desktop
autoclicker/windows_portable/: ihautoclicker.vbs
autoclicker/windows_portable/app/: release
ihautoclickerlib/: CMakeLists.txt
ihautoclickerlib/ihacinput_linux/: CMakeLists.txt
ihautoclickerlib/ihacinput_linux/src/: ihacinput.cpp
ihautoclickerlib/ihacinput_windows/: CMakeLists.txt
ihautoclickerlib/ihacinput_windows/src/: ihacinput.cpp
ihautoclickerlib/public/: ihacinput.h  ihautoclicker.h  jni_ihautoclicker.h  types.h
ihautoclickerlib/src/: test_ihacinput_linux.cpp
linux_appimage/IHAutoClicker_v1.0.0.AppDir/: .DirIcon  ihautoclicker.desktop
scripts/: cpreqtomodulelibs.bat  cpreqtomodulelibs.sh  genruntime.bat  genruntime.sh
win_ihac_exec/: CMakeLists.txt
win_ihac_exec/src/: main.cpp
